--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,3 +14,4 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.2
 Roxygen: list(markdown = TRUE)
+Alternative_repositories:  http://bioconductor.org/biocLite.R
