--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,4 +14,4 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.2
 Roxygen: list(markdown = TRUE)
-Additional_repositories:  https://bioconductor.org/
+Additional_repositories: http://bioconductor.org/packages/3.9/bioc
