--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,7 @@ Maintainer: Luis Valledor <valledorluis@uniovi.es>
 Description: User friendly package for single and multi omics data analysis.
 License: Apache License (>= 2.0)
 Depends: R (>= 3.5)
+biocViews:
 Imports: readxl, writexl, plyr, dplyr, igraph, RColorBrewer, parallel, pheatmap, foreach, iterators, randomForest,
         reshape2, methods, grid, mixOmics, plotly, omicade4, itertools, MASS, grDevices, tcltk,
         ica, doParallel, VennDiagram, plotrix, impute, missForest, FSA, car, webshot, utils, stats, graphics, ggplot2
